--- a/package.json
+++ b/package.json
@@ -10,8 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "apexcharts": "^3.44.0",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.1",
+    "react-charts": "^3.0.0-beta.57",
+    "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.12.0",
     "react-pro-sidebar": "^1.1.0-alpha.1",
     "react-router-dom": "^6.19.0"
   },
