--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ramonak/react-progress-bar": "^5.1.1",
     "apexcharts": "^3.44.0",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
